testsuite/escript/errors/errors004-program-parameter-same-name-as-function.err2
errors004-program_parameter-same-name-as-function.src:2:13: error: Cannot define a program parameter with the same name as function 'print'.
